[gd_scene load_steps=10 format=2]

[ext_resource path="res://lvl-common/Spring.gd" type="Script" id=1]
[ext_resource path="res://assets/lvl7/spring-0.png" type="Texture" id=2]
[ext_resource path="res://assets/lvl7/spring-2.png" type="Texture" id=3]
[ext_resource path="res://assets/lvl7/spring-3.png" type="Texture" id=4]
[ext_resource path="res://assets/lvl7/spring-1.png" type="Texture" id=5]
[ext_resource path="res://assets/lvl7/sprint-s.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.0417, 25.1097 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]

[node name="Spring" type="StaticBody2D"]
position = Vector2( 32, 1063 )
script = ExtResource( 1 )

[node name="Spring" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpringPlatform" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="SpringPlatform"]
visible = false
position = Vector2( 0.205994, -16 )
scale = Vector2( 3.2, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpringPlatform/Area2D"]
visible = false
shape = SubResource( 3 )
[connection signal="body_entered" from="SpringPlatform/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="SpringPlatform/Area2D" to="." method="_on_Area2D_body_exited"]
